Bug 394343 - Saving a CD does sometimes deselect it in the list instead of keeping it selected
Summary: Saving a CD does sometimes deselect it in the list instead of keeping it sele...
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.1.2
Platform: Mageia RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-05-16 19:06 UTC by Bruno Cornec
Modified: 2018-07-20 16:09 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.1.3
Sentry Crash Report:


Attachments
Video showing the issue (898.60 KB, video/mp4)
2018-06-21 09:56 UTC, Bruno Cornec
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bruno Cornec 2018-05-16 19:06:03 UTC
When typing coments on a CD for example, I regularly save my content, (and then save the full DB to be safe).

Before 3.1.1/3.1.2, IIRC, doing so, you were kept on the comment pane and the CD you were editing was still selected, which was making additionas very easy.

Now you need to go back to the list, re-select the CD and re choose comment to be able to continue with is a bit annoying.

However, there are some cases, where it doesn't work consistently like that, but I'm not able to give you the set of steps to be in that configuration easily.

However, most of the time after some usage for me it's like that.
Comment 1 Robby Stephenson 2018-05-19 00:41:29 UTC
I'm having trouble reproducing this so far. Any other details you could notice about when it happens would be helpful. You're editing in the Comments tab, "Save" in the dialog, then without closing the dialog, saving the DB, right? And the editor dialog resets?
Comment 2 Christoph Feck 2018-06-06 01:28:20 UTC
If you can provide the information requested in comment #1, please add it.
Comment 3 Bruno Cornec 2018-06-10 07:08:20 UTC
I redo it just now to be sure of the sequence on my side:

I open tellico with my CD database
I select a CD in the main list
I go into the comment tab from the "Edit entry" window
I type my new comment here and press "save entry"
Then the line in the main window becomes bold as expected but in the entry window instead of staying with the entry content (due to the fact the CD is still selected), it's reset and I have nothing anymore, and the first tab is shown instead of the comment tab. 
So I have to go in the main window to re-select the CD again (easy as it's the bold one of course) and at that point the content re-appear in the "Edit entry" window, I have to go back to the comment tab and continue to enter comments.

Hope this clarifies the issue described.
If you need my CD DB let me know.
Comment 4 Bruno Cornec 2018-06-21 09:56:19 UTC
Created attachment 113483 [details]
Video showing the issue
Comment 5 Robby Stephenson 2018-07-09 01:31:21 UTC
Git commit 13f0e57ae30ac726798d0080f479a86ee9712d82 by Robby Stephenson.
Committed on 09/07/2018 at 01:29.
Pushed by rstephenson into branch '3.1'.

Do not force a refresh of the quick filter when modifying entries

The side effect of refreshing the filter was to clear the selection,
which is undesired. On review, no need to manually update the filter
anyway since the sort model takes care of re-checking the filter text
against the modified entries.
FIXED-IN: 3.1.3

M  +4    -0    ChangeLog
M  +0    -1    src/controller.cpp

https://commits.kde.org/tellico/13f0e57ae30ac726798d0080f479a86ee9712d82
Comment 6 Robby Stephenson 2018-07-09 01:32:06 UTC
Your video was very helpful, Bruno. I noticed you had a filter applied which ended up being the right clue, I believe. Let me know if this fixes it completely for you.
Comment 7 Bruno Cornec 2018-07-20 16:09:51 UTC
Thanks Robby ! Your patch fixes it for me and I'm back to the tellico we had before ;-) Great work as usual.

I'm pushing it to Mageia updates for our community. Will update to 3.1.3 when ready.