Do not force a refresh of the quick filter when modifying entries

The side effect of refreshing the filter was to clear the selection,
which is undesired. On review, no need to manually update the filter
anyway since the sort model takes care of re-checking the filter text
against the modified entries.

BUG: 394343
FIXED-IN: 3.1.3